[gd_scene load_steps=23 format=3 uid="uid://c7eg1cw4ykewe"]

[ext_resource type="Script" path="res://scenes/areas/UI.gd" id="1_r5xcq"]
[ext_resource type="Texture2D" uid="uid://bfanalh7cvan3" path="res://assets/ui/dash_unavailable.png" id="2_jsuyv"]
[ext_resource type="Texture2D" uid="uid://dxkoas3gsequ5" path="res://Health Bar Asset Pack 2 by Adwit Rahman/HealthBarBackground.png" id="3_756g7"]
[ext_resource type="Texture2D" uid="uid://d0f4pnyc78ve0" path="res://Health Bar Asset Pack 2 by Adwit Rahman/HealthBarOver.png" id="4_x1rls"]
[ext_resource type="Texture2D" uid="uid://bpp43rcycbo2f" path="res://Health Bar Asset Pack 2 by Adwit Rahman/HealthBarProgress.png" id="5_s5j8f"]
[ext_resource type="Script" path="res://scripts/UI/HealthBar.gd" id="6_4s7el"]
[ext_resource type="Texture2D" uid="uid://dmt2k0glhayib" path="res://Health Bar Asset Pack 2 by Adwit Rahman/CourageBarBackground.png" id="7_qlngj"]
[ext_resource type="Texture2D" uid="uid://bsoabmxwhp1g1" path="res://Health Bar Asset Pack 2 by Adwit Rahman/CourageBarOver.png" id="8_c5skx"]
[ext_resource type="Script" path="res://scripts/UI/CourageBarUpgradedgradedgraded.gd" id="9_6rvtk"]
[ext_resource type="Texture2D" uid="uid://yewi762qi8cf" path="res://Health Bar Asset Pack 2 by Adwit Rahman/CourageBarProgressDash.png" id="9_6301w"]
[ext_resource type="Script" path="res://scripts/UI/sword_usage.gd" id="11_2worh"]
[ext_resource type="Texture2D" uid="uid://ddcyicydiranx" path="res://Health Bar Asset Pack 2 by Adwit Rahman/CourageBarProgressDashUpgraded.png" id="11_j36w8"]
[ext_resource type="Texture2D" uid="uid://bq76lakhfjx8u" path="res://assets/ui/Exotic Swords.png" id="12_x3hs7"]
[ext_resource type="Texture2D" uid="uid://b5r5rsktq75so" path="res://Health Bar Asset Pack 2 by Adwit Rahman/sword_progress_2d.tres" id="13_71r1t"]
[ext_resource type="Script" path="res://scripts/UI/dash_usage.gd" id="14_4gte7"]
[ext_resource type="Texture2D" uid="uid://dlw2mgo0dm4kh" path="res://assets/ui/kisspng-brand-line-logo-number-technology-sprite-arrow-5b3ee609de7cb2.3924113515308487779113.png" id="15_cfnwv"]
[ext_resource type="Texture2D" uid="uid://6jautbjr3gpw" path="res://Health Bar Asset Pack 2 by Adwit Rahman/dash_ready__2d.tres" id="16_5fmh0"]
[ext_resource type="Script" path="res://scripts/UI/pause_options.gd" id="17_nqp70"]

[sub_resource type="GDScript" id="GDScript_e70ww"]
script/source = "extends Label


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"HP: \" + str(Game.playerHP)
"

[sub_resource type="GDScript" id="GDScript_ciooa"]
script/source = "extends Label


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Courage: \" + str(Game.courage)
"

[sub_resource type="Gradient" id="Gradient_d6d4m"]
colors = PackedColorArray(0.423529, 0.74902, 1, 1, 0.423529, 0.74902, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3v235"]
gradient = SubResource("Gradient_d6d4m")
width = 1
height = 5

[node name="UI" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_r5xcq")

[node name="HP" type="Label" parent="."]
visible = false
offset_left = 23.0
offset_top = 19.0
offset_right = 78.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_font_sizes/font_size = 18
text = "HP: 10"
script = SubResource("GDScript_e70ww")

[node name="Courage" type="Label" parent="."]
visible = false
offset_left = 23.0
offset_top = 48.0
offset_right = 84.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Courage: 0"
script = SubResource("GDScript_ciooa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 0.289063
anchor_bottom = 0.0802469
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="HealthBar" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 10.0
value = 10.0
texture_under = ExtResource("3_756g7")
texture_over = ExtResource("4_x1rls")
texture_progress = ExtResource("5_s5j8f")
script = ExtResource("6_4s7el")
metadata/_edit_use_anchors_ = true

[node name="CourageBar" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("7_qlngj")
texture_over = ExtResource("8_c5skx")
texture_progress = ExtResource("9_6301w")
script = ExtResource("9_6rvtk")
metadata/_edit_use_anchors_ = true

[node name="ThresholdIndicator" type="TextureRect" parent="VBoxContainer/CourageBar"]
z_index = 1
layout_mode = 0
offset_left = 216.0
offset_top = 3.0
offset_right = 254.0
offset_bottom = 21.0
texture = SubResource("GradientTexture2D_3v235")
stretch_mode = 4

[node name="ThresholdIcon" type="TextureRect" parent="VBoxContainer/CourageBar"]
z_index = 2
layout_mode = 2
offset_top = 28.0
offset_right = 333.0
offset_bottom = 28.0
texture = ExtResource("2_jsuyv")
expand_mode = 1
stretch_mode = 4

[node name="CourageBarUpgraded" type="TextureProgressBar" parent="VBoxContainer"]
visible = false
layout_mode = 2
value = 100.0
texture_under = ExtResource("7_qlngj")
texture_over = ExtResource("8_c5skx")
texture_progress = ExtResource("11_j36w8")
script = ExtResource("9_6rvtk")
metadata/_edit_use_anchors_ = true

[node name="ThresholdIndicator" type="TextureRect" parent="VBoxContainer/CourageBarUpgraded"]
z_index = 1
layout_mode = 0
offset_left = 180.0
offset_top = 3.0
offset_right = 218.0
offset_bottom = 21.0
texture = SubResource("GradientTexture2D_3v235")
stretch_mode = 4

[node name="ThresholdIcon" type="TextureRect" parent="VBoxContainer/CourageBarUpgraded"]
z_index = 2
layout_mode = 2
offset_top = 28.0
offset_right = 333.0
offset_bottom = 28.0
texture = ExtResource("2_jsuyv")
expand_mode = 1
stretch_mode = 4

[node name="SwordUsage" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -50.0
offset_right = 228.0
offset_bottom = -26.0
grow_vertical = 0
alignment = 2
script = ExtResource("11_2worh")

[node name="TextureRect" type="TextureRect" parent="SwordUsage"]
layout_mode = 2
texture = ExtResource("12_x3hs7")
expand_mode = 2
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="SwordUsage"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 10

[node name="TextureProgressBar" type="TextureProgressBar" parent="SwordUsage/MarginContainer"]
layout_mode = 2
max_value = 0.5
step = 0.01
value = 0.5
texture_progress = ExtResource("13_71r1t")

[node name="MarginContainer2" type="MarginContainer" parent="SwordUsage"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 10

[node name="TextureProgressBar2" type="TextureProgressBar" parent="SwordUsage/MarginContainer2"]
layout_mode = 2
max_value = 0.5
step = 0.01
value = 0.5
texture_progress = ExtResource("13_71r1t")

[node name="MarginContainer3" type="MarginContainer" parent="SwordUsage"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 10

[node name="TextureProgressBar3" type="TextureProgressBar" parent="SwordUsage/MarginContainer3"]
layout_mode = 2
max_value = 0.5
step = 0.01
value = 0.5
texture_progress = ExtResource("13_71r1t")

[node name="MarginContainer4" type="MarginContainer" parent="SwordUsage"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 10

[node name="TextureProgressBar4" type="TextureProgressBar" parent="SwordUsage/MarginContainer4"]
layout_mode = 2
max_value = 0.5
step = 0.01
value = 0.5
texture_progress = ExtResource("13_71r1t")

[node name="DashUsage" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -55.0
offset_right = -23.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("14_4gte7")

[node name="TextureRect" type="TextureRect" parent="DashUsage"]
layout_mode = 2
texture = ExtResource("15_cfnwv")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DashUsage"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10

[node name="TextureProgressBar" type="TextureProgressBar" parent="DashUsage/MarginContainer"]
layout_mode = 2
max_value = 2.0
step = 0.01
value = 2.0
texture_progress = ExtResource("16_5fmh0")

[node name="Pause_Options" type="Control" parent="."]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("17_nqp70")

[node name="Panel" type="Panel" parent="Pause_Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="Pause_Options"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MainMenuButton" type="MarginContainer" parent="Pause_Options/Buttons"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Button" type="Button" parent="Pause_Options/Buttons/MainMenuButton"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Main Menu"

[node name="AudioButton" type="MarginContainer" parent="Pause_Options/Buttons"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Button" type="Button" parent="Pause_Options/Buttons/AudioButton"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Audio"

[node name="Menu" type="Control" parent="Pause_Options"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Pause_Options/Menu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0646966, 0.0646965, 0.0646965, 0.827451)

[node name="MarginContainer" type="MarginContainer" parent="Pause_Options/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="Pause_Options/Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Pause_Options/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX:"

[node name="SFXSlider" type="HSlider" parent="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="AmbientSoundLabel2" type="Label" parent="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ambient Sound:"

[node name="AmbientSoundSlider" type="HSlider" parent="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="Pause_Options/Menu"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 76.0
offset_right = 50.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
text = "Back
"

[connection signal="hidden" from="Pause_Options" to="Pause_Options" method="_on_hidden"]
[connection signal="pressed" from="Pause_Options/Buttons/MainMenuButton/Button" to="Pause_Options" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Pause_Options/Buttons/AudioButton/Button" to="Pause_Options" method="_on_audio_button_pressed"]
[connection signal="value_changed" from="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer/AmbientSoundSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Pause_Options/Menu/MarginContainer/VBoxContainer/GridContainer/AmbientSoundSlider" to="." method="_on_ambient_sound_slider_value_changed"]
[connection signal="pressed" from="Pause_Options/Menu/BackButton" to="Pause_Options" method="_on_audio_back_button_pressed"]
